Fix danger directive not having dark mode (#6)

--- a/sphinx_rtd_dark_mode/static/dark_mode_css/dark.css
+++ b/sphinx_rtd_dark_mode/static/dark_mode_css/dark.css
@@ -385,3 +385,73 @@ html[data-theme='dark']
 html[data-theme='dark'] .wy-alert.wy-alert-warning .wy-alert-title {
   background-color: #803b00;
 }
+
+html[data-theme='dark'] .rst-content .danger,
+html[data-theme='dark'] .rst-content .error,
+html[data-theme='dark'] .rst-content .wy-alert-danger.admonition,
+html[data-theme='dark'] .rst-content .wy-alert-danger.admonition-todo,
+html[data-theme='dark'] .rst-content .wy-alert-danger.attention,
+html[data-theme='dark'] .rst-content .wy-alert-danger.caution,
+html[data-theme='dark'] .rst-content .wy-alert-danger.hint,
+html[data-theme='dark'] .rst-content .wy-alert-danger.important,
+html[data-theme='dark'] .rst-content .wy-alert-danger.note,
+html[data-theme='dark'] .rst-content .wy-alert-danger.seealso,
+html[data-theme='dark'] .rst-content .wy-alert-danger.tip,
+html[data-theme='dark'] .rst-content .wy-alert-danger.warning,
+html[data-theme='dark'] .wy-alert.wy-alert-danger {
+  background-color: #82231a;
+}
+
+html[data-theme='dark'] .rst-content .danger .admonition-title,
+html[data-theme='dark'] .rst-content .danger .wy-alert-title,
+html[data-theme='dark'] .rst-content .error .admonition-title,
+html[data-theme='dark'] .rst-content .error .wy-alert-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert-danger.admonition-todo
+  .admonition-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert-danger.admonition-todo
+  .wy-alert-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert-danger.admonition
+  .admonition-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert-danger.admonition
+  .wy-alert-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert-danger.attention
+  .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.attention .wy-alert-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.caution .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.caution .wy-alert-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.hint .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.hint .wy-alert-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert-danger.important
+  .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.important .wy-alert-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.note .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.note .wy-alert-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.seealso .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.seealso .wy-alert-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.tip .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.tip .wy-alert-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.warning .admonition-title,
+html[data-theme='dark'] .rst-content .wy-alert-danger.warning .wy-alert-title,
+html[data-theme='dark']
+  .rst-content
+  .wy-alert.wy-alert-danger
+  .admonition-title,
+html[data-theme='dark']
+  .wy-alert.wy-alert-danger
+  .rst-content
+  .admonition-title,
+html[data-theme='dark'] .wy-alert.wy-alert-danger .wy-alert-title {
+  background-color: #b9372b;
+}
